# Dioxin

./: .gitmodules  CMakeLists.txt
src/: block.h  content.cpp  content.h  game.cpp  game.h  item.h  main.cpp
src/content/blocks/: dirt.json  schema.md
src/content/items/: dirt.json  schema.md
